    - Remove RPM and m4 from default tools on Windows
    - BitKeeper, CVS, Perforce, RCS, SCCS are deprecated from default
      tools and will be removed in future SCons versions to speed up
      SCons initialization (it will still be possible to use these tools
      explicitly)

  From Dirk Baechle:
    - Update XML doc editor configuration

  From Rob Managan:
    - Updated the TeX builder to support use of the -synctex=1
      option and the files it creates.
    - Updated the TeX builder to correctly clean auxiliary files when
      the biblatex package is used.

RELEASE 2.3.1

  From Andrew Featherstone:
    - Added support for EPUB output format to the DocBook tool.

  From Tom Tanner:
    - Stop leaking file handles to subprocesses by switching to using subprocess
      always.
    - Allow multiple options to be specified with --debug=a,b,c
    - Add support for a readonly cache (--cache-readonly)
    - Always print stats if requested
    - Generally try harder to print out a message on build errors
    - Adds a switch to warn on missing targets
    - Add Pseudo command to mark targets which should not exist after
      they are built.

  From Bogdan Tenea:
    - Check for 8.3 filenames on cygwin as well as win32 to make variant_dir work properly.

  From Alexandre Feblot:
    - Make sure SharedLibrary depends on all dependent libs (by depending on SHLINKCOM)

  From Stefan Sperling:
    - Fixed the setup of linker flags for a versioned SharedLibrary
      under OpenBSD (#2916).

  From Antonio Cavallo:
    - Improve error if Visual Studio bat file not found.

  From Manuel Francisco Naranjo:
    - Allow Subst.Literal string objects to be compared with each other,
      so they work better in AddUnique() and Remove().

  From David Rothenberger:
    - Added cyglink linker that uses Cygwin naming conventions for
      shared libraries and automatically generates import libraries.

  From Dirk Baechle: